<resources>
  <string name="about_announcements">Receive Announcements</string>
  <string name="about_ask_support">Ask for Support</string>
  <string name="about_contact_us">Contact Email</string>
  <string name="about_instagram">Like on Instagram</string>
  <string name="about_medium">Read on Medium</string>
  <string name="about_privacy">Privacy Policy</string>
  <string name="about_source_code">GitHub Source Code</string>
  <string name="about_telegram">Join on Telegram</string>
  <string name="about_twitter">Follow on Twitter</string>
  <string name="about_website">Official Website</string>
  <string name="about_wiki">Learn on Wiki</string>
  <string name="about_youtube">Subscribe on YouTube</string>
  <string name="account_address">Account address</string>
  <string name="account_already_imported">Already imported</string>
  <string name="account_already_imported_description">This wallet is already imported</string>
  <string name="account_confirmation_title">Confirm mnemonic</string>
  <string name="account_confirmation_title_v2">Confirm Passphrase</string>
  <string name="account_options">Account options</string>
  <string name="account_options_backup_google">Backup to Google</string>
  <string name="account_options_delete_backup">Delete Google backup</string>
  <string name="activity_data_not_up_to_date_title">Some data is not up to date</string>
  <string name="activity_empty_content_title">You will see your activity here once you start transacting</string>
  <string name="activity_error_title">Could not load your activity. Try to refresh the list</string>
  <string name="activity_pool_title">Pool</string>
  <string name="activity_referral_title">Referral joined</string>
  <string name="add_liquidity_alert_text">You will earn fees proportional to your share of the pool from liquidity provision.</string>
  <string name="add_liquidity_confirmation_title">Confirm supply</string>
  <string name="add_liquidity_title">Add Liquidity</string>
  <string name="add_node_name_already_existing">Node with this name has been added already</string>
  <string name="address_not_found_1">Recipients not found</string>
  <string name="amount_error_no_funds">Sorry, you don\' t have enough funds to transfer specified amount.</string>
  <string name="appearance_title">Appearance</string>
  <string name="apr_description">APR in farming denotes the annualized return on investment for participating in DeFi liquidity provision or staking activities.</string>
  <string name="ask_biometry_message">Would you like to use biometry for authentication?</string>
  <string name="asset_details_asset_id">Asset ID</string>
  <string name="asset_details_liquid_balance">Liquid balance</string>
  <string name="asset_details_recent_activity">Recent activity</string>
  <string name="asset_details_token_price">Token price</string>
  <string name="asset_details_your_pools">Your %s pools</string>
  <string name="asset_to_send">Asset to send</string>
  <string name="backup_account_already_exist">Backup already exists. Proceed to rewrite it.</string>
  <string name="backup_not_enough_space_error">Backup failed. Not enough space on your Google Drive. Free some space and try again.</string>
  <string name="backup_now">Backup now</string>
  <string name="backup_password_mandatory_reqs_fulfilled">Mandatory requirement for the password fulfilled</string>
  <string name="backup_password_requirments">Minimum six characters. Optionally, for better security, include uppercase letters, numbers and non-alphabetic characters.</string>
  <string name="backup_password_title">Setting a password will encrypt your Google backup. You’ll need to enter this when restoring your wallet.\nMinimum password length is 6 characters.</string>
  <string name="backup_password_title_2">Setting a password will encrypt your Google backup. You’ll need to enter this when restoring your wallet.</string>
  <string name="biometric_dialog_title">Authenticate</string>
  <string name="block_id">Block hash</string>
  <string name="buy_crypto_buy_xor_banner_title">Buy XOR token</string>
  <string name="buy_crypto_buy_xor_with_fiat_subtitle">Buy or sell XOR token with euro cash</string>
  <string name="buy_crypto_buy_xor_with_fiat_title">Buy XOR with fiat</string>
  <string name="cant_load_balance">Can\'t load balance</string>
  <string name="change_language">Change language</string>
  <string name="change_pin">Change PIN</string>
  <string name="choose_token">Select token</string>
  <string name="choose_tokens">Choose tokens</string>
  <string name="claim_contact">If you have any questions or concerns, you can %% contact us%%.</string>
  <string name="claim_contact_us">%%Contact us%% for any questions or concerns</string>
  <string name="claim_error_title">Transition failed</string>
  <string name="claim_error_title_v1">Transition of assets failed. Please try again later.</string>
  <string name="claim_notification_text">Transition in progress...</string>
  <string name="claim_rewards">Claim rewards</string>
  <string name="claim_subtitle">We need your consent to make a transition of your funds from SORA so that you can use them. SORA will now operate on Substrate network. Please confirm transition.</string>
  <string name="claim_subtitle_confirmed">Thank you for the confirmation!</string>
  <string name="claim_subtitle_confirmed_v2">Transition of assets are in progress</string>
  <string name="claim_subtitle_v2">• We need consent to transition your assets from SORA v1 to SORA v2\n\n• The SORA v2 network is built with Substrate, which is natively compatible with the Polkadot and Kusama ecosystem\n\n• Assets on Ethereum are not affected, you can still access them by importing your passphrase to any compatible wallet</string>
  <string name="claim_welcome_to_v1">Welcome to</string>
  <string name="commom_scan_qr">Scan QR code</string>
  <string name="common_activity">Activity</string>
  <string name="common_and">and</string>
  <string name="common_app_version">App version</string>
  <string name="common_akkadian">Old Akkadian</string>
  <string name="common_egyptian" translatable="false">Middle Egyptian (Hieroglyphs)</string>
  <string name="common_arab">Arab</string>
  <string name="common_azerbaijani">Azerbaijani</string>
  <string name="common_back">Back</string>
  <string name="common_backup">Backup</string>
  <string name="common_balance">Balance</string>
  <string name="common_bashkir">Bashkir</string>
  <string name="common_bridged">Bridged</string>
  <string name="common_buy">Buy</string>
  <string name="common_buy_xor">Buy XOR</string>
  <string name="common_cancel">Cancel</string>
  <string name="common_chinese">Chinese</string>
  <string name="common_chinesetaiwan">Сhinese (Taiwan)</string>
  <string name="common_choose_asset">Select asset</string>
  <string name="common_claim">Claim</string>
  <string name="common_close">Close</string>
  <string name="tx_details_view_on_explorer">View on explorer</string>
  <string name="common_confirm">Confirm</string>
  <string name="common_connected">Connected</string>
  <string name="common_connecting">Connecting...</string>
  <string name="common_continue">Continue</string>
  <string name="common_copied">Copied to Clipboard</string>
  <string name="common_create_qr_request">Create QR-request</string>
  <string name="common_croatian">Croatian</string>
  <string name="common_currencies">Currencies</string>
  <string name="common_delete">Delete</string>
  <string name="common_disabled">Disabled</string>
  <string name="common_discover">Discover</string>
  <string name="common_done">Done</string>
  <string name="common_dutch">Dutch</string>
  <string name="common_edit">Edit</string>
  <string name="common_enabled">Enabled</string>
  <string name="common_english">English</string>
  <string name="common_enter_amount">Enter amount</string>
  <string name="common_error_ambiguous_result">Ambiguous result</string>
  <string name="common_error_fee_rate_not_available">Can\'t contact withdrawal provider. Please, try again later.</string>
  <string name="common_error_general_message">We are working hard to fix the problem. Please, try again later.</string>
  <string name="common_error_general_title">Error</string>
  <string name="common_error_internal_error_title">Internal error</string>
  <string name="common_error_invalid_parameters">Invalid Parameters</string>
  <string name="common_error_invalid_parameters_body">Please, check internet connection and try again later.</string>
  <string name="common_error_invalid_query_format">Your query is wrong. Please try again.</string>
  <string name="common_error_invitation_accepting_window_closed">Invitation accepting window closed</string>
  <string name="common_error_invitation_already_accepted">You have already applied another invitation code</string>
  <string name="common_error_invitation_code_not_found">Invitation code is invalid</string>
  <string name="common_error_inviter_registered_after_invitee">Provided invitation code cannot be applied because it is from the user who registered after you</string>
  <string name="common_error_mnemonic_is_not_valid">Please, make sure that your passphrase consists of 12 or 24 words and they are all correct.</string>
  <string name="common_error_mnemonic_length_error">Passphrase must contain 12 or 24 words</string>
  <string name="common_error_network">Please, check internet connection and try again later.</string>
  <string name="common_error_no_browser_error">Please install a browser to open the link</string>
  <string name="common_error_not_enough_invitations">Sorry, but you don\'t have any invitations to share</string>
  <string name="common_error_not_found_title">Resource unavailable</string>
  <string name="common_update">Update</string>
  <string name="empty_recent_recipients_2">Recipients will appear here</string>
  <string name="polkaswap_info_text_1">Polkaswap is maintained by the SORA community. Before continuing to use Polkaswap, please review the %%Polkaswap FAQ%%  and documentation, which includes a detailed explanation on how Polkaswap works, as well as the %%Polkaswap Memorandum and Terms of Services%%, and %%Privacy Policy%%.\n\nThese documents are crucial to a secure and positive user experience. By using Polkaswap, you acknowledge that you have read and understand these documents.</string>
  <string name="polkaswap_info_text_2">You also acknowledge the following:</string>
  <string name="polkaswap_info_text_3">Your sole responsibility for compliance with all laws that may apply to your particular use of Polkaswap in your legal jurisdiction;</string>
  <string name="polkaswap_info_text_4">Your understanding that the current version of Polkaswap is an alpha version: it has not been fully tested, and some functions may not perform as designed;</string>
  <string name="polkaswap_info_text_5">Your understanding and voluntary acceptance of the risks involved in using Polkaswap, including, but not limited to, the risk of losing tokens.</string>
  <string name="polkaswap_info_text_6">Once more, please do not continue without reading the %%Polkaswap FAQ%%, %%Polkaswap Memorandum and Terms of Services%%, and %%Privacy Policy%%!</string>
  <string name="polkaswap_market">Market</string>
  <string name="polkaswap_smart">Smart</string>
  <string name="restart_required">Restart required</string>
  <string name="select_account_address_1">Search or add a new address</string>
  <string name="select_recipient">Select recipient address</string>
  <string name="tabbar_polkaswap_title">Polkaswap</string>
  <string name="update_downloaded">An update for the SORA application has been downloaded and is ready to be installed.\n\nIt is important to use the latest version of the application.\n\nIn order to update the app, a restart is required.</string>
  <string name="update_install_now">Would you like to install the update now?</string>
</resources>