<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/baseBackground">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/image_flexible_update"
        app:layout_constraintBottom_toTopOf="@id/btnUpdateStart"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/background_transparent_image_down"
        android:visibility="@integer/big_image_transparent"
        app:layout_constraintBottom_toTopOf="@id/btnUpdateStart"
        app:layout_constraintTop_toTopOf="@id/image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Soramitsu.Neu.Bold.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x3"
        android:layout_marginTop="@dimen/x2"
        android:text="@string/common_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comingSoon"
        style="@style/TextAppearance.Soramitsu.Neu.Semibold.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x2"
        android:background="@drawable/rounded_rectangle_grey"
        android:backgroundTint="?attr/iconTintColorNegative"
        android:paddingStart="@dimen/x1"
        android:paddingTop="@dimen/x1_2"
        android:paddingEnd="@dimen/x1"
        android:paddingBottom="@dimen/x1_2"
        android:text="@string/restart_required"
        android:textAllCaps="true"
        android:textColor="?attr/pureWhiteOnDay"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/comingSoonSubtitle"
        style="@style/TextAppearance.Soramitsu.Neu.Light.15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x3"
        android:layout_marginTop="@dimen/x2"
        android:layout_marginEnd="@dimen/x3"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="@dimen/x1_2"
        android:text="@string/update_downloaded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/tvStakingMore"
        style="@style/TextAppearance.Soramitsu.Neu.Regular.15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x3"
        android:layout_marginTop="@dimen/x2"
        android:layout_marginEnd="@dimen/x3"
        android:letterSpacing="-0.02"
        android:text="@string/update_install_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comingSoonSubtitle" />

    <Button
        android:id="@+id/btnUpdateStart"
        style="@style/Widget.Soramitsu.Button.Primary.Neu.56"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/x2"
        android:layout_marginEnd="@dimen/x2"
        android:layout_marginBottom="@dimen/x1"
        android:enabled="true"
        android:text="@string/common_update"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/btnUpdateCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/btnUpdateCancel"
        style="@style/Widget.Soramitsu.Button.Primary.Neu.56.Shadow"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/x2"
        android:text="@string/common_cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>