<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/flatAboveBackground"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <jp.co.soramitsu.common.presentation.view.SoraNeuToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?flatAboveBackground"
        app:iconRight="@drawable/ic_neu_qr_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/select_recipient" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/contactsSearchView"
        style="@style/SearchViewStyle2"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:queryHint="@string/select_account_address_1" />

    <LinearLayout
        android:id="@+id/emptyStatePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            style="@style/TextAppearance.Soramitsu.Paragraph_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/empty_recent_recipients_2"
            android:textColor="@color/informationTextColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x1"
            android:src="@drawable/ic_neu_dots" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptySearchResultPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/x4"
        android:paddingEnd="@dimen/x4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            style="@style/TextAppearance.Soramitsu.Paragraph_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/address_not_found_1"
            android:textColor="@color/informationTextColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x1"
            android:src="@drawable/ic_neu_dots" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactsSearchView" />

    <ProgressBar
        android:id="@+id/preloaderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactsSearchView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>